--- a/Shu.plist
+++ b/Shu.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>192.168.0.165/app.ipa</string>
+					<string>http://192.168.0.165</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -32,8 +32,6 @@
 			</array>
 			<key>metadata</key>
 			<dict>
-				<key>bundle-identifier</key>
-				<string>com.xxxx.demo</string>
 				<key>bundle-version</key>
 				<string>1.0.0</string>
 				<key>kind</key>
